# HelixNet

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml
Docs/: conf.py  index.rst  installation.rst  layers.rst  optimiser.rst
docs/: DIY.rst  changelog.rst  conf.py  index.rst  installation.rst  io.rst  layers.rst  loss.rst  metrics.rst  models.rst  optimisers.rst  optimizers.rst  preprocessing.rst
examples/: ConvMNIST.py  MNIST_Dense.py  ModelShapes.py  interactive.ipynb  spiral_test.py
src/: ConvMNIST.py  __init__.py  __main__.py  activations.py  conv_test.py  layers.py  models.py  optimisers.py  simple_test.py
src/helixnet/: __init__.py  io.py  layers.py  loss.py  metrics.py  models.py  optimisers.py  optimizers.py  preprocessing.py
tests/: __init__.py  conv_test.py  io_test.py  layers_test.py  loss_test.py  metrics_test.py  models_test.py  optimizers_test.py  test_activations.py
