[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "HelixNet"
version = "0.1.6"
authors = [
    { name = "Amr Fahmy" },
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "mygrad",
    "rich"
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-book-theme",
]
