[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "HelixNet"
version = "0.6.0"
authors = [
    { name = "Amr Fahmy" },
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "mygrad",
    "rich"
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-book-theme",
]
