[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "HelixNet"
version = "0.6.0"
authors = [
    { name = "Amr Fahmy" },
]
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "mygrad",
    "rich"
]
description = "A powerful simple Neural Network building blocks based on MyGrad"

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-book-theme",
]
