[metadata]
name = HelixNet
version = 0.6.0
summary = A powerful simple Neural Network building blocks based on MyGrad
home_page = https://helixnet.readthedocs.io/en/latest/
author = Amr Fahmy
author_email = UNKNOWN
platform = All
license = MIT

[options]
package_dir = 
    =src
packages = find:

[options.packages.find]
where = src